--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -20,15 +20,15 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@auth0/angular-jwt": "^3.0.1",
-    "@types/alertify": "^0.3.30",
-    "alertifyjs": "^1.13.1",
-    "bootstrap": "^4.3.1",
-    "bootswatch": "^4.3.1",
+    "@auth0/angular-jwt": "^2.0.0",
+    "alertifyjs": "^1.11.1",
+    "bootstrap": "^4.1.2",
+    "bootswatch": "^4.1.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^3.0.1",
-    "rxjs": "6.3.3",
+    "ngx-bootstrap": "^3.3.0",
+    "ngx-gallery": "^5.10.0",
+    "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
