--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -31,8 +31,8 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.7",
-    "@angular/cli": "~9.0.7",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/cli": "~8.3.0",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "^3.5.10",
