--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -25,6 +25,7 @@
     "bootswatch": "^4.4.1",
     "core-js": "^3.6.4",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.5.0",
     "ngx-gallery": "^5.10.0",
     "rxjs": "^6.5.4",
