--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -29,6 +29,7 @@
     "ngx-bootstrap": "^5.5.0",
     "ngx-gallery": "^5.10.0",
     "rxjs": "^6.5.4",
+    "time-ago-pipe": "^1.3.2",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
